--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
     <p>It was a dark and stormy night...</p>
+    <p>and the LaunchCode students were studying hard in a local coffee shop</p>
   </body>
 </html>
