--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <p>It was a dark and stormy night...</p>
     <p>and the LaunchCode students were studying hard in a local coffee shop</p>
+<p>git it very git</p>
   </body>
 </html>
