This is the fourth commmit

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <p>It was a dark and stormy night...</p>
     <p>and the LaunchCode students were studying hard in a local coffee shop</p>
 <p>git it very git</p>
+<p>YAY!  This makes so much more sense! </p>
   </body>
 </html>
