Make the story still kinda sucky.

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <p>and the LaunchCode students were studying hard in a local coffee shop</p>
 <p>git it very git</p>
 <p>YAY!  This makes so much more sense! </p>
+<p> this is done while we work simultaneously</p>
   </body>
 </html>
