--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <p>It was a dark and stormy night...</p>
     <p>and the LaunchCode students were studying hard in a local coffee shop</p>
+    <p>new paragraph</p>
 <p>git it very git</p>
 <p>YAY!  This makes so much more sense! </p>
 <p> this is done while we work simultaneously</p>
